preparing sites
